apps/wazuh/indexer_stack/wazuh-dashboard/dashboard-deploy.yaml
# Copyright (C) 2019, Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Dashboard Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wazuh-dashboard
  namespace: wazuh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-dashboard
  template:
    metadata:
      labels:
        app: wazuh-dashboard
      name: wazuh-dashboard
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - gpu-k8s
      volumes:
        - name: config
          configMap:
            name: dashboard-conf
        - name: dashboard-certs
          secret:
            secretName: dashboard-certs
      containers:
        - name: wazuh-dashboard
          image: 'wazuh/wazuh-dashboard:4.8.2'
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /usr/share/wazuh-dashboard/config/opensearch_dashboards.yml
              subPath: opensearch_dashboards.yml
              readOnly: false
            - name: dashboard-certs
              mountPath: /usr/share/wazuh-dashboard/certs/cert.pem
              readOnly: true
              subPath: cert.pem
            - name: dashboard-certs
              mountPath: /usr/share/wazuh-dashboard/certs/key.pem
              readOnly: true
              subPath: key.pem
            - name: dashboard-certs
              mountPath: /usr/share/wazuh-dashboard/certs/root-ca.pem
              subPath: root-ca.pem
              readOnly: true
          ports:
            - containerPort: 5601
              name: dashboard
