apps/wazuh/indexer_stack/wazuh-dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-dashboard-ingress
  namespace: wazuh
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: wazuh.atoca.house
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard
            port:
              number: 443
  tls:
    - hosts:
        - wazuh.atoca.house
      secretName: wazuh-dashboard-tls
